k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  labels:
    name: lms
    app: stitch-lms
